// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigations can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createNavigation": Object {
      "id": Any<String>,
      "key": "createNavKey321",
      "links": Any<Array>,
      "name": "Create Navigation Name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deleteNavigation": Any<String>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be read by id - public 1`] = `
Object {
  "data": Object {
    "navigation": Object {
      "id": Any<String>,
      "key": "TestKey6",
      "links": Array [
        Object {
          "__typename": "ExternalNavigationLink",
          "label": "External Label",
          "url": "linkurl.ch/",
        },
        Object {
          "__typename": "ArticleNavigationLink",
          "article": null,
          "label": "Article Label",
        },
        Object {
          "__typename": "PageNavigationLink",
          "label": "Page Label",
          "page": null,
        },
      ],
      "name": "Test 6",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "navigation": Object {
      "id": Any<String>,
      "key": "TestKey4",
      "links": Array [
        Object {
          "__typename": "ExternalNavigationLink",
          "label": "External Label",
          "url": "linkurl.ch/",
        },
        Object {
          "__typename": "ArticleNavigationLink",
          "article": null,
          "label": "Article Label",
        },
        Object {
          "__typename": "PageNavigationLink",
          "label": "Page Label",
          "page": null,
        },
      ],
      "name": "Test 4",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be read by key 1`] = `
Object {
  "data": Object {
    "navigation": Object {
      "id": Any<String>,
      "key": "createNavKey321",
      "links": Any<Array>,
      "name": "Create Navigation Name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be read in list 1`] = `
Object {
  "data": Object {
    "navigations": Array [
      Object {
        "id": Any<String>,
        "key": "TestKey3",
        "links": Any<Array>,
        "name": "Test 3",
      },
      Object {
        "id": Any<String>,
        "key": "TestKey2",
        "links": Any<Array>,
        "name": "Test 2",
      },
      Object {
        "id": Any<String>,
        "key": "createNavKey321",
        "links": Any<Array>,
        "name": "Create Navigation Name",
      },
      Object {
        "id": Any<String>,
        "key": "TestKey0",
        "links": Any<Array>,
        "name": "Test 0",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updateNavigation": Object {
      "id": Any<String>,
      "key": "updatedNavKey321",
      "links": Array [
        Object {
          "__typename": "ExternalNavigationLink",
          "label": "New External Label",
          "url": "newlinkurl.ch/",
        },
        Object {
          "__typename": "ArticleNavigationLink",
          "article": null,
          "label": "New Article Label",
        },
        Object {
          "__typename": "PageNavigationLink",
          "label": "New Page Label",
          "page": null,
        },
      ],
      "name": "Updated Navigation Name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: will reject input without links 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [GraphQLError: Variable "$input" got invalid value { name: "No Link Nav", key: "createNavNoLinkKey321" }; Field links of required type [NavigationLinkInput!]! was not provided.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: will reject request without ID or key 1`] = `
Object {
  "data": Object {
    "navigation": null,
  },
  "errors": Array [
    [GraphQLError: You must provide either \`id\` or \`key\`.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: will reject request without ID or key 2`] = `
Object {
  "data": Object {
    "navigation": null,
  },
  "errors": Array [
    [GraphQLError: You must provide either \`id\` or \`key\`.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
